2002-09-21  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/browser.cpp: Removed Node::toInline
          method.

2002-09-23  S. K. Bose  <bose@pavan.barc.ernet.in>

        * src/openvrml/OpenVRML/field.cpp: VC++6.0 complains about
          reference to a zero-sized array at "typedef value_type 
          & reference" within array_vector class definition. Though
          ArraySize is passed as an argument in template declaration.
          To get rid of this spurious complain "enum {_ArraySize = 
          ArraySize}" is declared.

        * src/openvrml/OpenVRML/field.cpp: reverse_iterator template
          definition in VC++6.0 does not take one argument and some
          other fixes for VC++6.0.
   
2002-09-23  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Use std::copy instead of
          memcpy. Fix bugs in ConstSFNode::CreateObject, 
          ConstMFRotation::CreateObject, ConstMFVec3f::CreateObject and
          MFVec3f::setValue. Additional documentation.

        * src/openvrml/OpenVRML/MathUtils.cpp: Removed unneeded include.

        * models/TestJSAI.java: Add tests of SFNode, ConstMFNode,
          ConstMFRotation, ConstMFTime, ConstMFVec2f and ConstMFVec3f.

        * java/vrml/field/ConstMFFloat.java,
          java/vrml/field/ConstMFNode.java,
          java/vrml/field/ConstMFRotation.java,
          java/vrml/field/ConstMFTime.java: Update javadoc comments.

2002-09-21  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Fixes to MFNode::print to
          correctly print the last element, and to avoid printing null
          elements.

2002-09-16  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Removed
          Group::setChildren, Group::addChildren, and