@@ -1,9 +1,11 @@
-2002-09-21  Braden McDaniel  <braden@endoframe.com>
+2002-09-25  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/node.cpp,
           src/openvrml/OpenVRML/node.h,
           src/openvrml/OpenVRML/browser.cpp: Removed Node::toInline
           method.
+
+        * src/openvrml/OpenVRML/field.cpp: Fixed const issue.
 
 2002-09-23  S. K. Bose  <bose@pavan.barc.ernet.in>
 
